# fastapi-clerk-starter

./: .env.sample  .gitignore  README.md  fastapi_clerk_starter.db  main.py  pyproject.toml
core/: config.py  jwtutils.py
models/: models.py  schemas.py
routers/: user.py
