[project]
name = "fastapi-clerk-starter"
version = "0.1.0"
description = "A starter template for building secure and scalable FastAPI applications with Clerk authentication integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
