[project]
name = "fastapi-clerk-starter"
version = "1.0.0"
description = "A starter template for building secure and scalable FastAPI applications with Clerk authentication integration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
   {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
keywords = [
    "fastapi",
    "clerk",
    "authentication",
    "api",
    "backend",
    "security",
    "jwt",
    "python"
    "uv"
    "ysskrishna"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security :: Cryptography",
    "Framework :: FastAPI",
]
dependencies = [
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.urls]
Homepage = "https://github.com/ysskrishna/fastapi-clerk-starter"
Documentation = "https://github.com/ysskrishna/fastapi-clerk-starter#readme"
Repository = "https://github.com/ysskrishna/fastapi-clerk-starter.git"
Issues = "https://github.com/ysskrishna/fastapi-clerk-starter/issues"
"Bug Tracker" = "https://github.com/ysskrishna/fastapi-clerk-starter/issues"